--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@heroicons/react": "^2.1.1",
     "@mui/material": "^5.13.4",
     "@reduxjs/toolkit": "^1.9.5",
+    "@vercel/analytics": "^1.1.3",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.0",
     "echarts": "^5.4.3",
